--- a/1-microcontrollers/1_blinking-led/wokwi.toml
+++ b/1-microcontrollers/1_blinking-led/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'build/arduino.avr.uno/1_blinking.ino.hex'
-elf = 'build/arduino.avr.uno/1_blinking.ino.elf'
+firmware = 'build/arduino.avr.uno/1_blinking-led.ino.hex'
+elf = 'build/arduino.avr.uno/1_blinking.ino-led.elf'
