--- a/1-microcontrollers/4.2_counting-interrupts/wokwi.toml
+++ b/1-microcontrollers/4.2_counting-interrupts/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'build/arduino.avr.uno/4.2_counting-interrupts.ino.hex'
-elf = 'build/arduino.avr.uno/4.2_counting-interrupts.ino.elf'
+firmware = 'build/4.2_counting-interrupts.ino.hex'
+elf = 'build/4.2_counting-interrupts.ino.elf'
