--- a/1-microcontrollers/4.3_counting-interrupts-nobouncing/wokwi.toml
+++ b/1-microcontrollers/4.3_counting-interrupts-nobouncing/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'build/arduino.avr.uno/4.3_counting-interrupts-nobouncing.ino.hex'
-elf = 'build/arduino.avr.uno/4.3_counting-interrupts-nobouncing.ino.elf'
+firmware = 'build/4.3_counting-interrupts-nobouncing.ino.hex'
+elf = 'build/4.3_counting-interrupts-nobouncing.ino.elf'
