--- a/1-microcontrollers/4_counting/wokwi.toml
+++ b/1-microcontrollers/4_counting/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'build/arduino.avr.uno/4_counting.ino.hex'
-elf = 'build/arduino.avr.uno/4_counting.ino.elf'
+firmware = 'build/4_counting.ino.hex'
+elf = 'build/4_counting.ino.elf'
