--- a/1-microcontrollers/6_time-driven-blinking/wokwi.toml
+++ b/1-microcontrollers/6_time-driven-blinking/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'build/arduino.avr.uno/6_time-driven-blinking.ino.hex'
-elf = 'build/arduino.avr.uno/6_time-driven-blinking.ino.elf'
+firmware = 'build/6_time-driven-blinking.ino.hex'
+elf = 'build/6_time-driven-blinking.ino.elf'
