--- a/1-microcontrollers/7_serial-echo/wokwi.toml
+++ b/1-microcontrollers/7_serial-echo/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'build/arduino.avr.uno/7_serial-echo.ino.hex'
-elf = 'build/arduino.avr.uno/7_serial-echo.ino.elf'
+firmware = 'build/7_serial-echo.ino.hex'
+elf = 'build/7_serial-echo.ino.elf'
